# rust-wroclaw

./: README.md
talk-archive/2020-02-fantastic-actors-and-where-to-find-them/rustycabs/: Cargo.toml  README.md
talk-archive/2020-02-fantastic-actors-and-where-to-find-them/rustycabs/src/: system.rs  web.rs
talk-archive/2022-07-can-you-trigger-all-clippy-lints-and-live-to-tell-the-tale/: Cargo.toml  README.md
talk-archive/2022-07-can-you-trigger-all-clippy-lints-and-live-to-tell-the-tale/src/: interesting.rs  invalid_utf8_in_unchecked.rs  lib.rs  more_than_trivial.rs  pitfalls_of_unsafe.rs  read_zero_byte_vec.rs  trivial.rs
talk-archive/2022-07-can-you-trigger-all-clippy-lints-and-live-to-tell-the-tale/src/interesting/: fn_address_comparisons.rs  if_let_mutex.rs  infinite_iter.rs  invalid_null_ptr_usage.rs  serde_api_misuse.rs  vtable_address_comparisons.rs
talk-archive/2022-07-can-you-trigger-all-clippy-lints-and-live-to-tell-the-tale/src/more_than_trivial/: absurd_extreme_comparisons.rs  approx_constant.rs  bad_bit_mask.rs  clone_double_ref.rs  deprecated_semver.rs  enum_clike_unportable_variant.rs  ineffective_bit_mask.rs  inherent_to_string_shadow_display.rs  inline_fn_without_body.rs  invisible_characters.rs  iter_next_loop.rs  let_underscore_lock.rs  logic_bug.rs  mistyped_literal_suffixes.rs  modulo_one.rs  non_octal_unix_permissions.rs  nonsensical_open_options.rs  possible_missing_comma.rs  (+8 more)
talk-archive/2022-27-rust-and-graphql-for-backend/: Cargo.toml  talk.tex
talk-archive/2022-27-rust-and-graphql-for-backend/src/: data.rs  graphql.rs  main.rs
(+70 files in other folders)
